--- a/integrations/evm-hardhat/package.json
+++ b/integrations/evm-hardhat/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
+    "@dotenvx/dotenvx": "^1.49.1",
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "dotenv": "^17.2.1",
     "hardhat": "^2.26.1",
     "prettier": "^3.6.2",
     "prettier-plugin-solidity": "^2.1.0",
