docs(hardhat): improve readme

--- a/integrations/evm-hardhat/.env.example
+++ b/integrations/evm-hardhat/.env.example
@@ -1,3 +1,80 @@
-ORACLE_PROGRAM_ID=YOUR_ORACLE_PROGRAM_ID
-EVM_PRIVATE_KEY=YOUR_EVM_PRIVATE_KEY
-BASE_SEPOLIA_ETHERSCAN_API_KEY=YOUR_BASESCAN_API_KEY
+# =============================================================================
+# SEDA Hardhat Integration - Environment Variables
+# =============================================================================
+# Copy this file to .env and fill in your values
+
+# =============================================================================
+# REQUIRED VARIABLES
+# =============================================================================
+
+# Oracle Program ID (required for all operations)
+# This is the ID of the WASM binary on the SEDA network
+ORACLE_PROGRAM_ID=0x...
+
+# =============================================================================
+# TRANSACTION SIGNING
+# =============================================================================
+
+# Private key for transaction signing (required for non-local networks)
+# Format: 0x followed by 64 hex characters
+EVM_PRIVATE_KEY=0x...
+
+# =============================================================================
+# BLOCK EXPLORER API KEYS (optional)
+# =============================================================================
+
+# Base Sepolia Etherscan API Key (for contract verification)
+# Get your API key from: https://basescan.org/apis
+BASE_SEPOLIA_ETHERSCAN_API_KEY=your_api_key_here
+
+# =============================================================================
+# NETWORK CONFIGURATION
+# =============================================================================
+# SEDA Core addresses are automatically configured per network in seda.config.ts
+# Available networks:
+# - base: Mainnet Base
+# - baseSepolia: Testnet Base Sepolia  
+# - superseedSepolia: Superseed Sepolia
+# - chiado: Gnosis Chiado
+# - hyperliquidPurrsec: Hyperliquid Purrsec
+
+# =============================================================================
+# DEPLOYED CONTRACT ADDRESSES
+# =============================================================================
+# Contract addresses are automatically saved to deployments/addresses.json
+# after successful deployment. No manual configuration needed.
+
+# =============================================================================
+# USAGE EXAMPLES
+# =============================================================================
+# 
+# 1. Deploy PriceFeed to Base Sepolia:
+#    bunx hardhat pricefeed deploy --network baseSepolia --verify
+#
+# 2. Transmit data request:
+#    bunx hardhat pricefeed transmit --network baseSepolia
+#
+# 3. Get latest price:
+#    bunx hardhat pricefeed latest --network baseSepolia
+#
+# 4. Deploy with custom parameters:
+#    bunx hardhat pricefeed deploy --network baseSepolia --coreaddress 0x... --oracleprogramid 0x...
+#
+# 5. Transmit with custom fees (in ETH):
+#    bunx hardhat pricefeed transmit --network baseSepolia --requestfee 0.001 --resultfee 0.002 --batchfee 0.0005
+#
+# =============================================================================
+# LOCAL DEVELOPMENT
+# =============================================================================
+# 
+# For local testing (hardhat network):
+# - No EVM_PRIVATE_KEY needed
+# - MockSedaCore will be deployed automatically
+# - ZeroHash will be used as Oracle Program ID
+#
+# Example:
+# bunx hardhat pricefeed deploy --network hardhat
+# bunx hardhat pricefeed transmit --network hardhat
+# bunx hardhat pricefeed latest --network hardhat
+#
+# =============================================================================
